2000-11-30  Bernd Schmidt  <bernds@redhat.co.uk>

	1999-11-29  Joern Rennecke  <amylaar@redhat.co.uk>
	* reload1.c (reloads_conflict): Reverse test comparing operand
	numbers when testing for conflict between output/outaddr reloads.

	2000-07-12  Richard Henderson  <rth@redhat.com>
	* reload.c (push_secondary_reload): Make sure to add the new
	reload at the end, after acquiring secondary memory.

	2000-09-14  Alexandre Oliva  <aoliva@redhat.com>, Bernd Schmidt  <bernds@redhat.co.uk>
	* reload.c (find_reloads_address_1): Generate reloads for auto_inc
	pseudos that refer to the original pseudos, not only to their
	equivalent memory locations.

	2000-09-18  Bernd Schmidt  <bernds@redhat.co.uk>
	* reload1.c (forget_old_reloads_1): If a hard reg is stored, clear
	its entry in spill_reg_store.

	Tue Oct 26 00:41:54 1999  Bernd Schmidt  <bernds@cygnus.co.uk>
	* reload1.c (reload_reg_free_for_value_p): Show
	RELOAD_FOR_OTHER_ADDRESS reloads can conflict with RELOAD_OTHER
	reloads.

	2000-02-26  Geoff Keating  <geoffk@cygnus.com>
	* reload1.c (do_output_reload): Check reg_reloaded_valid before
	looking at reg_reloaded_contents.

	Thu Apr 13 19:39:56 2000  Clinton Popetz  <cpopetz@cygnus.com>
	* emit-rtl.c (try_split): Avoid infinite loop if the split
	results in a sequence that contains the original insn.

	1999-12-14  Bernd Schmidt  <bernds@cygnus.co.uk>
	* combine.c (combine_simplify_rtx): Don't make shared rtl.
	(simplify_logical): Likewise.

	Sat May 20 07:27:35 2000  Alexandre Oliva  <aoliva@cygnus.com>
	* fold-const.c (make_range): Handle degenerated intervals.
	Fixes c-torture/execute/991221-1.c

	2000-07-15  Michael Meissner  <meissner@redhat.com>
	* fold-const.c (fold): When optimizing FOO++ == CONST into ++FOO
	== CONST + INCREMENT, don't overwrite the tree node for FOO++,
	create a new node instead.

	2000-01-01  Bernd Schmidt  <bernds@cygnus.co.uk>
	* expmed.c (emit_store_flag): Prevent losing a pending stack